--- a/scss/04_blocks/_b-text.scss
+++ b/scss/04_blocks/_b-text.scss
@@ -365,6 +365,9 @@
     }
     &__subText {
       @include font-size(18);
+      & .red {
+        color: $redColor;
+      }
     }
   }
   .b-differenceDiagram {
