--- a/scss/02_layouts/_l-main.scss
+++ b/scss/02_layouts/_l-main.scss
@@ -146,6 +146,80 @@
 /*
   difference
 ----------------------------------------------- */
+.s-difference {
+  & .l-S02 {
+    background-color: $differenceBgColor;
+  }
+  & .l-S03 {
+    padding: 104px 0;
+  }
+  & .l-L01 {
+    text-align: center;
+    padding-bottom: 40px;
+  }
+  & .l-L02 {
+    display: grid;
+    grid-template-columns: 1fr 53%;
+    grid-template-rows: repeat(5, auto);
+    gap: 0 64px;
+    grid-template-areas:
+      "l-L03 l-L07"
+      "l-L04 l-L07"
+      "l-L05 l-L07"
+      "l-L06 l-L07"
+      "l-L08 l-L07";
+  }
+  & .l-L03,
+  & .l-L04 {
+    padding-bottom: 32px;
+  }
+  & .l-L05 {
+    padding-bottom: 24px;
+  }
+  & .l-L07 {
+    padding: 32px;
+  }
+  & .l-L08 {
+    & .b-difference__subText {
+      padding: 48px 24px;
+    }
+  }
+
+  & .l-L06 {
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 56px;
+    & .b-boxFlame__lineCircle {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      width: 132px;
+      height: 132px;
+      &:nth-of-type(2) {
+        position: relative;
+        &::before,
+        &::after {
+          content: "+";
+          @include font-size(36);
+          line-height: 0.9;
+          position: absolute;
+          top: 0;
+          bottom: 0;
+          margin: auto 0;
+          width: 36px;
+          height: 36px;
+        }
+        &::before {
+          left: -44px;
+        }
+        &::after {
+          right: -44px;
+        }
+      }
+    }
+  }
+}
 
 /*
   reason
