--- a/scss/02_layouts/_l-main.scss
+++ b/scss/02_layouts/_l-main.scss
@@ -88,7 +88,7 @@
 ----------------------------------------------- */
 .s-service {
   & .l-L04 {
-    padding: 106px 0 56px 0;
+    padding: 104px 0 64px 0;
     background-color: $orangeColor;
   }
   & .l-L05 {
@@ -226,7 +226,7 @@
 ----------------------------------------------- */
 .s-reason {
   & .l-L04 {
-    padding: 106px 0 56px 0;
+    padding: 104px 0 64px 0;
     background-color: $blueColor;
   }
   & .l-L05 {
@@ -268,7 +268,34 @@
 /*
   flow
 ----------------------------------------------- */
-
+.s-flow {
+  & .l-S02 {
+    padding-bottom: 104px;
+  }
+  & .l-L04 {
+    padding: 104px 0 64px 0;
+    background-color: $greenColor;
+  }
+  & .l-L05 {
+    position: relative;
+    max-width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      margin: auto;
+      width: 90%;
+      height: 5px;
+      background-color: $whiteColor;
+    }
+  }
+}
 /*
   creator
 ----------------------------------------------- */
