--- a/css/style.css
+++ b/css/style.css
@@ -660,6 +660,7 @@ Layout
 ----------------------------------------------- */
 .s-creator .l-S02 {
   background-color: #242422;
+  padding-bottom: 64px;
 }
 .s-creator .l-L05 {
   display: -webkit-box;
