--- a/scss/04_blocks/_b-parts.scss
+++ b/scss/04_blocks/_b-parts.scss
@@ -146,7 +146,40 @@
 /*
   FAQ
 ----------------------------------------------- */
-
+.b-faqContents__boxTitle {
+  position: relative;
+  z-index: 0;
+  &::before,
+  &::after {
+    content: "";
+    text-align: center;
+    position: absolute;
+    top: 2px;
+    left: -40px;
+    width: 40px;
+    height: 40px;
+  }
+  &::before {
+    content: "Q";
+    @include font-size(18);
+    line-height: 1;
+    text-align: center;
+    top: 12px;
+    left: -35px;
+    width: 18px;
+    height: 18px;
+    z-index: 2;
+  }
+  &::after {
+    left: -40px;
+    width: 40px;
+    height: 40px;
+    background-image: url(../../img/faq_icon.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    z-index: 1;
+  }
+}
 /*
   message
 ----------------------------------------------- */
