--- a/css/style.css
+++ b/css/style.css
@@ -1747,7 +1747,7 @@ Block
   content: "";
   text-align: center;
   position: absolute;
-  top: 2px;
+  top: 0;
   left: -40px;
   width: 40px;
   height: 40px;
