--- a/scss/04_blocks/_b-parts.scss
+++ b/scss/04_blocks/_b-parts.scss
@@ -154,7 +154,7 @@
     content: "";
     text-align: center;
     position: absolute;
-    top: 2px;
+    top: 0;
     left: -40px;
     width: 40px;
     height: 40px;
