--- a/scss/02_layouts/_l-main.scss
+++ b/scss/02_layouts/_l-main.scss
@@ -10,8 +10,7 @@
 .s-reason,
 .s-flow,
 .s-creator,
-.s-faq,
-.s-message {
+.s-faq {
   & .l-L01 {
     padding: 104px 0 80px 0;
   }
@@ -357,6 +356,32 @@
     }
   }
 }
+
 /*
   message
 ----------------------------------------------- */
+.s-message {
+  & .l-S02 {
+    position: relative;
+    background-color: $messageBgColor;
+    &::before {
+      content: "SLashNext";
+      @include font-size(188);
+      line-height: 1;
+      color: rgba(255, 255, 255, 0.7);
+      text-align: center;
+      position: absolute;
+      left: 0;
+      right: 0;
+      bottom: -30px;
+      margin: 0 auto;
+    }
+  }
+  & .l-L01 {
+    padding: 104px 0 120px 0;
+  }
+  & .l-L02 {
+    text-align: center;
+    padding-bottom: 32px;
+  }
+}
