--- a/scss/01_foundation/variable/_color.scss
+++ b/scss/01_foundation/variable/_color.scss
@@ -13,3 +13,4 @@ $differenceBgColor: #edf2f9;
 $messageBgColor: #edf2f5;
 $grayColor: #f3f4f4;
 $aboutGuidanceLineColor: #efefef;
+$footerCompanyLineColor: #d9d9d9;
