--- a/scss/02_layouts/_l-footer.scss
+++ b/scss/02_layouts/_l-footer.scss
@@ -2,3 +2,47 @@
 /*
   l-footer
 ----------------------------------------------- */
+.footer {
+  & .l-S02 {
+    background-color: $textColor;
+  }
+  & .l-S03 {
+    padding: 104px 0;
+  }
+  & .l-L02 {
+    text-align: center;
+    padding-bottom: 48px;
+  }
+  & .l-L05 {
+    width: 216px;
+  }
+  & .b-footerCompany {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 624px;
+    margin: 0 auto;
+    border-top: 1px solid $footerCompanyLineColor;
+
+    &__label {
+      display: flex;
+      align-items: center;
+      width: 184px;
+      padding: 16px 16px 16px 48px;
+      border-bottom: 1px solid $footerCompanyLineColor;
+    }
+    &__text {
+      width: calc(100% - 184px);
+      padding: 16px 48px 16px 16px;
+      border-bottom: 1px solid $footerCompanyLineColor;
+    }
+  }
+  & .l-L04 {
+    display: flex;
+    justify-content: space-between;
+    gap: 0 24px;
+  }
+  & .l-L07 {
+    text-align: center;
+    padding: 24px 0;
+  }
+}
