--- a/css/style.css
+++ b/css/style.css
@@ -204,7 +204,7 @@ Layout
 }
 
 .l-S03 {
-  width: calc(100% - 32px);
+  width: 90%;
   max-width: 1200px;
   margin: 0 auto;
 }
@@ -298,18 +298,8 @@ Layout
 ----------------------------------------------- */
 .header .l-S01 {
   position: fixed;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
   width: 100%;
   height: 56px;
-  padding: 0 16px;
   background-color: transparent;
   -webkit-transition: 0.3s ease-in-out;
   transition: 0.3s ease-in-out;
@@ -320,11 +310,22 @@ Layout
   -webkit-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
           box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
 }
+.header .l-S03 {
+  max-width: 1320px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
 
 @media screen and (min-width: 1200px) {
   .header .l-S01 {
     height: 100px;
-    padding: 0 60px;
   }
   .header .l-L01 {
     width: auto;
@@ -804,6 +805,26 @@ Layout
       -ms-flex-pack: justify;
           justify-content: space-between;
   gap: 0 24px;
+}
+.footer .l-L06 .m-footerNav__box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  gap: 0 24px;
+}
+.footer .l-L06 .m-footerNav__box .b-nav__item a {
+  display: inline-block;
+  padding: 20px 0;
 }
 .footer .l-L07 {
   text-align: center;
