--- a/scss/02_layouts/_l-footer.scss
+++ b/scss/02_layouts/_l-footer.scss
@@ -41,6 +41,21 @@
     justify-content: space-between;
     gap: 0 24px;
   }
+  & .l-L06 {
+    .m-footerNav__box {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: flex-end;
+      gap: 0 24px;
+      & .b-nav__item {
+        & a {
+          display: inline-block;
+          padding: 20px 0;
+        }
+      }
+    }
+  }
   & .l-L07 {
     text-align: center;
     padding: 24px 0;
