--- a/scss/02_layouts/_l-header.scss
+++ b/scss/02_layouts/_l-header.scss
@@ -5,12 +5,9 @@
 .header {
   & .l-S01 {
     position: fixed;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+
     width: 100%;
     height: 56px;
-    padding: 0 16px;
     background-color: transparent;
     transition: 0.3s ease-in-out;
     z-index: 100;
@@ -20,13 +17,18 @@
     background: $whiteColor;
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
   }
+  & .l-S03 {
+    max-width: 1320px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
 }
 
 @media screen and (min-width: 1200px) {
   .header {
     & .l-S01 {
       height: 100px;
-      padding: 0 60px;
     }
 
     & .l-L01 {
