--- a/scss/02_layouts/_l-main.scss
+++ b/scss/02_layouts/_l-main.scss
@@ -196,6 +196,9 @@
       width: 100%;
     }
   }
+  & .l-L15 {
+    padding-bottom: 64px;
+  }
   & .l-L16 {
     display: flex;
     justify-content: space-between;
