--- a/css/style.css
+++ b/css/style.css
@@ -669,18 +669,10 @@ Layout
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  height: auto;
 }
-.s-creator .l-L05 div {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-  height: 380px;
-}
-.s-creator .l-L05 div:nth-child(1n) {
-  background: #f2f2f2;
-}
-.s-creator .l-L05 div:nth-child(2n+1) {
-  background: #cdcdcd;
+.s-creator .l-L05 img {
+  width: 20%;
 }
 .s-creator .l-L07 {
   padding-top: 160px;
