--- a/scss/04_blocks/_b-flame.scss
+++ b/scss/04_blocks/_b-flame.scss
@@ -195,6 +195,10 @@
     &__boxIcon {
       width: 232px;
       margin-bottom: 0;
+      &.small {
+        width: 200px;
+        height: 232px;
+      }
     }
   }
 }
