--- a/scss/02_layouts/_l-footer.scss
+++ b/scss/02_layouts/_l-footer.scss
@@ -4,7 +4,11 @@
 ----------------------------------------------- */
 .footer {
   & .l-S02 {
+    // position: fixed;
+    // left: 0;
+    // bottom: 0;
     background-color: $textColor;
+    // z-index: -10;
   }
   & .l-S03 {
     padding: 104px 0;
