--- a/scss/02_layouts/_l-main.scss
+++ b/scss/02_layouts/_l-main.scss
@@ -5,6 +5,12 @@
 /*
   common
 ----------------------------------------------- */
+.container {
+  background-color: $whiteColor;
+}
+.contents {
+  margin-bottom: 900px;
+}
 .s-about,
 .s-service,
 .s-reason,
