--- a/scss/02_layouts/_l-footer.scss
+++ b/scss/02_layouts/_l-footer.scss
@@ -4,11 +4,12 @@
 ----------------------------------------------- */
 .footer {
   & .l-S02 {
-    // position: fixed;
-    // left: 0;
-    // bottom: 0;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    height: 900px;
     background-color: $textColor;
-    // z-index: -10;
+    z-index: -100;
   }
   & .l-S03 {
     padding: 104px 0;
